<resources>
    <string name="app_name">GDG PH</string>
    <string name="placeholder_text">Fusce fermentum odio nec arcu. Donec sodales sagittis magna. Curabitur blandit mollis lacus. Donec posuere vulputate arcu. Nam adipiscing. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vivamus consectetuer hendrerit lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Vestibulum rutrum, mi nec elementum vehicula, eros quam gravida nisl, id fringilla neque ante vel mi. Praesent ac sem eget est egestas volutpat.</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="image_description">Background image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About Developer</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_join_gdg">Join GDG</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_organisers">Organisers</string>
    <string name="date"><b>Date:</b> 16th November, 2019</string>
    <string name="time"><b>Time:</b> 10 am</string>
    <string name="venue"><b>Venue:</b> Knowledge Development Centre\n202a Aba Road, Port Harcourt</string>
    <string name="description_1">GDG DevFest Port Harcourt is an annual developer community-run festival organised by developers in Port Harcourt.</string>
    <string name="description_2">Join us on Saturday 16th November as we feature sessions on Android, Google Cloud Platform, Google Assistant, Flutter, Machine Learning with Tensor-Flow, and Mobile web.</string>
    <string name="description_3">You can check our events schedule here and plan to attend the sessions that fit your profile or things you\'d like to learn about.</string>
</resources>
